dhall/tests/type-inference/failure/unit/WithUnderscore.txt
Type error: error: unbound variable ``_``
 --> <current file>:1:24
  |
...
5 | { a.b = 1 } with a.c = _
  |                        ^ not found in this scope
  |
